bug: card button was overflowing

--- a/styles/themes.css
+++ b/styles/themes.css
@@ -29,7 +29,7 @@
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 50px 1fr 70px;
-  height: 25vh;
+  height: 27vh;
 }
 
 .card-heading {
@@ -94,4 +94,10 @@
 
 .show-modal {
   display: none;
+}
+
+@media only screen and (max-width: 600px) {
+  .card-content {
+    height: auto;
+  }
 }
